[tool.poetry]
name = "repl_python3_dpsharkBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
discord = "^1.7.3"
art = "^5.3"
pandas = "^1.3.4"
Flask = "^2.0.2"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
